--- a/css/sile.css
+++ b/css/sile.css
@@ -609,6 +609,7 @@
   margin-top: 120px;
   padding-top: 40px;
   justify-content: center;
+  margin-bottom: 77px;
 }
 
 .f_right {
@@ -642,4 +643,37 @@
   border-radius: 0px 5px 5px 0px;
   cursor: pointer;
   font-size: 16px;
+}
+.fotr_end {
+  padding-top: 19px;
+  width: 1185px;
+  height: 40px;
+  display: flex;
+  justify-content: space-between;
+  margin-left: 127.5px;
+  margin-bottom: 24px;
+}
+.fotr_end ul {
+  display: inline-flex;
+}
+.fotr_end p {
+  font-family: Poppins;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  text-align: left;
+  color: #091e42;
+}
+.fotr_end ul li {
+  list-style: none;
+  margin-left: 48px;
+}
+.fotr_end ul li a {
+  text-decoration: none;
+  font-family: Poppins;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 21px;
+  text-align: left;
+  color: #091e42;
 }
